modificacion de las  paprequest