@@ -3,6 +3,7 @@ package es.uji.ei1027.ovi.controller;
 import es.uji.ei1027.ovi.Service.SolicitudesService;
 import es.uji.ei1027.ovi.Validadores.PaRequestValidator;
 import es.uji.ei1027.ovi.dao.PaRequestDao;
+import es.uji.ei1027.ovi.dao.PapPatiDao;
 import es.uji.ei1027.ovi.dao.SolicitudesDao;
 import es.uji.ei1027.ovi.modelo.Login.UsuarioSesion;
 import es.uji.ei1027.ovi.modelo.PaRequest.PaRequest;
@@ -28,11 +29,7 @@ public class PaRequestController {
 
     private SolicitudesDao solicitudesDao;
     private PaRequestDao paRequestDao;
-
-    @Autowired
-    private es.uji.ei1027.ovi.dao.PapPatiDao PapPatiDao;
-
-    @Autowired
+    private PapPatiDao papPatiDao;
     private SolicitudesService solicitudesService;
 
     @Autowired
@@ -45,8 +42,21 @@ public class PaRequestController {
         this.paRequestDao = paRequestDao;
     }
 
+    @Autowired
+    public void setPapPatiDao(PapPatiDao papPatiDao) {
+        this.papPatiDao = papPatiDao;
+    }
+
+    @Autowired
+    public void setSolicitudesService(SolicitudesService solicitudesService) {
+        this.solicitudesService = solicitudesService;
+    }
+
     @GetMapping("/create/{id}")
-    public String mostrarFormularioRegistro(Model model, @PathVariable int id, HttpSession session) {
+    public String mostrarFormularioRegistro(Model model,
+                                            @PathVariable int id,
+                                            HttpSession session) {
+
         UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
 
         if (usuario == null) {
@@ -78,13 +88,12 @@ public class PaRequestController {
     }
 
     @PostMapping("/create/{id}")
-    public String procesarRegistro(
-            @ModelAttribute("paRequest") PaRequest paRequest,
-            BindingResult bindingResultPaRequest,
-            @ModelAttribute("solicitud") Solicitud solicitud,
-            BindingResult bindingResultSolicitud,
-            @PathVariable int id,
-            Model model) {
+    public String procesarRegistro(@ModelAttribute("paRequest") PaRequest paRequest,
+                                   BindingResult bindingResultPaRequest,
+                                   @ModelAttribute("solicitud") Solicitud solicitud,
+                                   BindingResult bindingResultSolicitud,
+                                   @PathVariable int id,
+                                   Model model) {
 
         PaRequestValidator validador = new PaRequestValidator();
         validador.validate(paRequest, bindingResultPaRequest);
@@ -114,132 +123,219 @@ public class PaRequestController {
             return "redirect:/PaRequest/mis/" + id;
 
         } catch (Exception e) {
-            System.out.println("ERROR AL GUARDAR: " + e.getMessage());
+            System.out.println("ERROR AL GUARDAR PA REQUEST: " + e.getMessage());
             e.printStackTrace();
+
+            model.addAttribute("paRequest", paRequest);
+            model.addAttribute("solicitud", solicitud);
+
             return "PaRequest/create";
         }
     }
 
     @GetMapping("/mis/{id}")
-    public String misProcesos(Model model, @PathVariable int id,
-                              @RequestParam(defaultValue = "0") int page) {
-        int pageSize = 10;
-        List<PaRequest> todos = paRequestDao.getPaRequestsByOviUser(id);
-        int total = todos.size();
-        int totalPages = (int) Math.ceil((double) total / pageSize);
-        int from = page * pageSize;
-        int to = Math.min(from + pageSize, total);
-        List<PaRequest> pagina = todos.subList(from, to);
+    public String misProcesos(Model model,
+                              @PathVariable int id,
+                              @RequestParam(defaultValue = "0") int page,
+                              @RequestParam(defaultValue = "todos") String filtroEstado,
+                              HttpSession session) {
 
-        model.addAttribute("paRequests", pagina);
-        model.addAttribute("idUsuario", id);
-        model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", totalPages);
-        return "PaRequest/mis";
-    }
-
-    @GetMapping("/misParticipadas/{id}")
-    public String misParticipadas(Model model, @PathVariable int id,
-                                  @RequestParam(defaultValue = "0") int page,
-                                  HttpSession session) {
         UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+
         if (usuario == null) {
             return "redirect:/login";
         }
-        // Solo el propio PAP/PATI puede ver su lista (o un admin OVI)
+
         if (usuario.getIdPersona() != id && !usuario.esAdminOvi()) {
             return "redirect:/";
         }
 
-        int pageSize = 10;
-        List<PaRequest> todos = paRequestDao.getPaRequestsByPapPati(id);
-        int total = todos.size();
-        int totalPages = (int) Math.ceil((double) total / pageSize);
-        int from = page * pageSize;
-        int to = Math.min(from + pageSize, total);
-        List<PaRequest> pagina = todos.subList(from, to);
+        filtroEstado = normalizarFiltroEstado(filtroEstado);
 
-        model.addAttribute("paRequests", pagina);
+        List<PaRequest> todos = paRequestDao.getPaRequestsByOviUser(id);
+        List<PaRequest> filtrados = filtrarPorEstado(todos, filtroEstado);
+
+        cargarPaginacionProcesos(model, filtrados, page);
+
         model.addAttribute("idUsuario", id);
-        model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("filtroEstado", filtroEstado);
+
+        return "PaRequest/mis";
+    }
+
+    @GetMapping("/misParticipadas/{id}")
+    public String misParticipadas(Model model,
+                                  @PathVariable int id,
+                                  @RequestParam(defaultValue = "0") int page,
+                                  @RequestParam(defaultValue = "todos") String filtroEstado,
+                                  HttpSession session) {
+
+        UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+
+        if (usuario == null) {
+            return "redirect:/login";
+        }
+
+        if (usuario.getIdPersona() != id && !usuario.esAdminOvi()) {
+            return "redirect:/";
+        }
+
+        filtroEstado = normalizarFiltroEstado(filtroEstado);
+
+        List<PaRequest> todos = paRequestDao.getPaRequestsByPapPati(id);
+        List<PaRequest> filtrados = filtrarPorEstado(todos, filtroEstado);
+
+        cargarPaginacionProcesos(model, filtrados, page);
+
+        model.addAttribute("idUsuario", id);
+        model.addAttribute("filtroEstado", filtroEstado);
+
         return "PaRequest/misParticipadas";
     }
 
     @GetMapping("/list")
-    public String listarPaRequests(Model model, HttpSession session,
-                                   @RequestParam(defaultValue = "0") int page) {
-        if (session.getAttribute("usuario") == null) {
+    public String listarPaRequests(Model model,
+                                   HttpSession session,
+                                   @RequestParam(defaultValue = "0") int page,
+                                   @RequestParam(defaultValue = "todos") String filtroEstado,
+                                   @RequestParam(defaultValue = "") String busqueda) {
+
+        UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+
+        if (usuario == null) {
             return "redirect:/login";
         }
-        int pageSize = 10;
-        List<PaRequest> todos = paRequestDao.getPaRequests();
-        int total = todos.size();
-        int totalPages = (int) Math.ceil((double) total / pageSize);
-        int from = page * pageSize;
-        int to = Math.min(from + pageSize, total);
-        List<PaRequest> pagina = todos.subList(from, to);
 
-        model.addAttribute("paRequests", pagina);
-        model.addAttribute("currentPage", page);
-        model.addAttribute("totalPages", totalPages);
+        if (!usuario.esAdminOvi()) {
+            return "redirect:/";
+        }
+
+        filtroEstado = normalizarFiltroEstado(filtroEstado);
+
+        StatusPaRequest estado = estadoDesdeFiltro(filtroEstado);
+
+        List<PaRequest> filtrados = paRequestDao.getPaRequestsFiltrados(estado, busqueda);
+
+        cargarPaginacionProcesos(model, filtrados, page);
+
+        model.addAttribute("filtroEstado", filtroEstado);
+        model.addAttribute("busqueda", busqueda);
+
         return "PaRequest/list";
     }
 
     @GetMapping("/detail/{id}")
-    public String detallePaRequest(Model model, @PathVariable int id, HttpSession session) {
-        if (session.getAttribute("usuario") == null) {
+    public String detallePaRequest(Model model,
+                                   @PathVariable int id,
+                                   HttpSession session) {
+
+        UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+
+        if (usuario == null) {
             return "redirect:/login";
         }
+
         PaRequest paRequest = paRequestDao.getPaRequestById(id);
-        if (paRequest == null) return "redirect:/PaRequest/list";
+
+        if (paRequest == null) {
+            return "redirect:/PaRequest/list";
+        }
+
         model.addAttribute("paRequest", paRequest);
-        model.addAttribute("papPatisAsociados", PapPatiDao.getPapPatisByPaRequest(id));
+        model.addAttribute("usuarioActual", usuario);
+
+        if (usuario.esAdminOvi()) {
+            model.addAttribute(
+                    "papPatisAsociados",
+                    paRequestDao.getPapPatisAsociadosByPaRequest(id)
+            );
+        } else {
+            model.addAttribute("papPatisAsociados", List.of());
+        }
+
         return "PaRequest/detail";
     }
 
     @GetMapping("/update/{id}")
-    public String mostrarFormularioUpdate(Model model, @PathVariable int id, HttpSession session) {
+    public String mostrarFormularioUpdate(Model model,
+                                          @PathVariable int id,
+                                          HttpSession session) {
+
         if (session.getAttribute("usuario") == null) {
             return "redirect:/login";
         }
+
         PaRequest paRequest = paRequestDao.getPaRequestById(id);
-        if (paRequest == null) return "redirect:/PaRequest/list";
+
+        if (paRequest == null) {
+            return "redirect:/PaRequest/list";
+        }
+
         model.addAttribute("paRequest", paRequest);
+
         return "PaRequest/update";
     }
 
     @PostMapping("/update/{id}")
-    public String procesarUpdate(
-            @ModelAttribute("paRequest") PaRequest paRequest,
-            @PathVariable int id,
-            HttpSession session) {
+    public String procesarUpdate(@ModelAttribute("paRequest") PaRequest paRequest,
+                                 @PathVariable int id,
+                                 HttpSession session) {
+
         if (session.getAttribute("usuario") == null) {
             return "redirect:/login";
         }
+
+        PaRequest original = paRequestDao.getPaRequestById(id);
+
+        if (original == null) {
+            return "redirect:/PaRequest/list";
+        }
+
         paRequest.setId(id);
+
+        if (paRequest.getFechaCreacion() == null) {
+            paRequest.setFechaCreacion(original.getFechaCreacion());
+        }
+
+        if (paRequest.getOviUser() == 0) {
+            paRequest.setOviUser(original.getOviUser());
+        }
+
         paRequestDao.updatePaRequest(paRequest);
+
         return "redirect:/PaRequest/detail/" + id;
     }
 
     @GetMapping("/accept/{id}")
-    public String aceptarPeticion(@PathVariable int id, Model model, HttpSession session) {
-        if (session.getAttribute("usuario") == null) return "redirect:/login";
+    public String aceptarPeticion(@PathVariable int id,
+                                  Model model,
+                                  HttpSession session) {
+
+        if (session.getAttribute("usuario") == null) {
+            return "redirect:/login";
+        }
 
         PaRequest paRequest = paRequestDao.getPaRequestById(id);
-        if (paRequest != null) {
-            paRequestDao.cambiarEstadoPaRequest(id, StatusPaRequest.En_activo);
 
-            Solicitud solicitud = solicitudesDao.getSolicitudRolMasReciente(paRequest.getOviUser(), TipoSolicitud.Pa_request);
-            if (solicitud != null) {
-                UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
-                int idTecnico = (usuario != null) ? usuario.getIdPersona() : 1;
-                solicitudesDao.aprobarRapido(solicitud.getIdSolicitud(), idTecnico);
-            }
+        if (paRequest == null) {
+            return "redirect:/PaRequest/list";
+        }
+
+        paRequestDao.cambiarEstadoPaRequest(id, StatusPaRequest.En_activo);
+
+        Solicitud solicitud = solicitudesDao.getSolicitudRolMasReciente(
+                paRequest.getOviUser(),
+                TipoSolicitud.Pa_request
+        );
+
+        if (solicitud != null) {
+            UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+            int idTecnico = (usuario != null) ? usuario.getIdPersona() : 1;
+            solicitudesDao.aprobarRapido(solicitud.getIdSolicitud(), idTecnico);
         }
 
         model.addAttribute("para", "Usuario solicitante (ID: " + paRequest.getOviUser() + ")");
-        model.addAttribute("asunto", "✅ Tu Petición de Asistencia ha sido ACEPTADA");
+        model.addAttribute("asunto", "Tu petición de asistencia ha sido aceptada");
         model.addAttribute("cuerpo", "Hola, te informamos de que el Técnico OVI ha revisado y aceptado tu petición de asistencia con número #" + id + ". Ya puedes acceder al sistema para ver los candidatos propuestos.");
         model.addAttribute("volverUrl", "/PaRequest/list");
 
@@ -247,23 +343,35 @@ public class PaRequestController {
     }
 
     @GetMapping("/reject/{id}")
-    public String rechazarPeticion(@PathVariable int id, Model model, HttpSession session) {
-        if (session.getAttribute("usuario") == null) return "redirect:/login";
+    public String rechazarPeticion(@PathVariable int id,
+                                   Model model,
+                                   HttpSession session) {
+
+        if (session.getAttribute("usuario") == null) {
+            return "redirect:/login";
+        }
 
         PaRequest paRequest = paRequestDao.getPaRequestById(id);
-        if (paRequest != null) {
-            paRequestDao.cambiarEstadoPaRequest(id, StatusPaRequest.Finalizada);
 
-            Solicitud solicitud = solicitudesDao.getSolicitudRolMasReciente(paRequest.getOviUser(), TipoSolicitud.Pa_request);
-            if (solicitud != null) {
-                UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
-                int idTecnico = (usuario != null) ? usuario.getIdPersona() : 1;
-                solicitudesDao.rechazarRapido(solicitud.getIdSolicitud(), idTecnico);
-            }
+        if (paRequest == null) {
+            return "redirect:/PaRequest/list";
+        }
+
+        paRequestDao.cambiarEstadoPaRequest(id, StatusPaRequest.Finalizada);
+
+        Solicitud solicitud = solicitudesDao.getSolicitudRolMasReciente(
+                paRequest.getOviUser(),
+                TipoSolicitud.Pa_request
+        );
+
+        if (solicitud != null) {
+            UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+            int idTecnico = (usuario != null) ? usuario.getIdPersona() : 1;
+            solicitudesDao.rechazarRapido(solicitud.getIdSolicitud(), idTecnico);
         }
 
         model.addAttribute("para", "Usuario solicitante (ID: " + paRequest.getOviUser() + ")");
-        model.addAttribute("asunto", "❌ Tu Petición de Asistencia ha sido RECHAZADA");
+        model.addAttribute("asunto", "Tu petición de asistencia ha sido rechazada");
         model.addAttribute("cuerpo", "Hola, lamentamos informarte de que tu petición #" + id + " ha sido rechazada tras la revisión del técnico. Ponte en contacto con la oficina para más detalles.");
         model.addAttribute("volverUrl", "/PaRequest/list");
 
@@ -271,84 +379,199 @@ public class PaRequestController {
     }
 
     @GetMapping("/candidatos/{idSolicitud}")
-    public String verCandidatos(@PathVariable int idSolicitud, Model model, HttpSession session,
+    public String verCandidatos(@PathVariable int idSolicitud,
+                                Model model,
+                                HttpSession session,
                                 @RequestParam(defaultValue = "0") int page) {
+
         if (session.getAttribute("usuario") == null) {
             return "redirect:/login";
         }
 
         int pageSize = 10;
-        List<Map<String, Object>> todos = PapPatiDao.getCandidatosDisponibles();
+
+        List<Map<String, Object>> todos = papPatiDao.getCandidatosDisponibles();
+
         int total = todos.size();
         int totalPages = (int) Math.ceil((double) total / pageSize);
+
+        if (totalPages == 0) {
+            page = 0;
+        } else if (page < 0) {
+            page = 0;
+        } else if (page >= totalPages) {
+            page = totalPages - 1;
+        }
+
         int from = page * pageSize;
         int to = Math.min(from + pageSize, total);
-        List<Map<String, Object>> pagina = (from <= to) ? todos.subList(from, to) : java.util.Collections.emptyList();
+
+        List<Map<String, Object>> pagina;
+
+        if (total == 0) {
+            pagina = List.of();
+        } else {
+            pagina = todos.subList(from, to);
+        }
 
         model.addAttribute("candidatos", pagina);
         model.addAttribute("idSolicitud", idSolicitud);
         model.addAttribute("currentPage", page);
         model.addAttribute("totalPages", totalPages);
+
         return "PaRequest/candidatos";
     }
 
     @GetMapping("/detalles/{id}")
-    public String verDetallesYEditar(@PathVariable int id, Model model, HttpSession session) {
+    public String verDetallesYEditar(@PathVariable int id,
+                                     Model model,
+                                     HttpSession session) {
+
         UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
-        if (usuario == null) return "redirect:/login";
+
+        if (usuario == null) {
+            return "redirect:/login";
+        }
 
         PaRequest paRequest = paRequestDao.getPaRequestById(id);
-        if (paRequest == null) return "redirect:/PaRequest/mis/" + usuario.getIdPersona();
+
+        if (paRequest == null) {
+            return "redirect:/PaRequest/mis/" + usuario.getIdPersona();
+        }
 
         model.addAttribute("paRequest", paRequest);
 
-        // 1. Buscamos todas las solicitudes de este usuario
-        java.util.List<es.uji.ei1027.ovi.modelo.Solicitud.Solicitud> solicitudes = solicitudesService.getSolicitudesDeUsuario(usuario);
+        List<Solicitud> solicitudes = solicitudesService.getSolicitudesDeUsuario(usuario);
 
         String notasTecnico = "No hay anotaciones adicionales registradas para este proceso.";
 
-        // 2. Filtramos para encontrar la de Asistencia Personal y sacamos el mensaje real
-        for (es.uji.ei1027.ovi.modelo.Solicitud.Solicitud sol : solicitudes) {
-            if (sol.getTipoSolicitud() != null && sol.getTipoSolicitud().name().equalsIgnoreCase("Pa_request")) {
+        for (Solicitud sol : solicitudes) {
+            if (sol.getTipoSolicitud() != null
+                    && sol.getTipoSolicitud().name().equalsIgnoreCase("Pa_request")) {
 
-                // ¡OJO AQUÍ! Cambia getMensajeResolucion() por el getter que uséis en vuestro modelo Solicitud
-                if (sol.getMotivoResolucion() != null && !sol.getMotivoResolucion().trim().isEmpty()) {
+                if (sol.getMotivoResolucion() != null
+                        && !sol.getMotivoResolucion().trim().isEmpty()) {
                     notasTecnico = sol.getMotivoResolucion();
                 }
-                break; // Encontramos la solicitud, paramos de buscar
+
+                break;
             }
         }
 
-        // 3. Enviamos el mensaje real a la vista
         model.addAttribute("comentariosTecnico", notasTecnico);
 
         return "paRequest/detalles";
     }
 
     @PostMapping("/detalles/guardar/{id}")
-    public String guardarModificacionSolicitud(@PathVariable int id, @ModelAttribute("paRequest") PaRequest paRequestUpdate, HttpSession session) {
-        UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
-        if (usuario == null) return "redirect:/login";
+    public String guardarModificacionSolicitud(@PathVariable int id,
+                                               @ModelAttribute("paRequest") PaRequest paRequestUpdate,
+                                               HttpSession session) {
 
-        // 1. Recuperamos el proceso original de la base de datos
+        UsuarioSesion usuario = (UsuarioSesion) session.getAttribute("usuario");
+
+        if (usuario == null) {
+            return "redirect:/login";
+        }
+
         PaRequest paRequestOriginal = paRequestDao.getPaRequestById(id);
 
         if (paRequestOriginal != null) {
-            // 2. Actualizamos los campos que el usuario ha podido modificar en el formulario
             paRequestOriginal.setTipoAsistencia(paRequestUpdate.getTipoAsistencia());
             paRequestOriginal.setZonaGeografica(paRequestUpdate.getZonaGeografica());
             paRequestOriginal.setDisponibilidadHoraria(paRequestUpdate.getDisponibilidadHoraria());
             paRequestOriginal.setGeneroAsistente(paRequestUpdate.getGeneroAsistente());
             paRequestOriginal.setPreferencias(paRequestUpdate.getPreferencias());
 
-            // 3. Importante: Al modificarla, el estado vuelve a ser "En espera" para que el técnico la revise de nuevo
             paRequestOriginal.setStatus(StatusPaRequest.En_espera);
 
             paRequestDao.updatePaRequest(paRequestOriginal);
-
-            // Aquí también deberías actualizar el estado de la Solicitud general a "Pendiente" si fuera necesario
         }
 
         return "redirect:/PaRequest/mis/" + usuario.getIdPersona();
+    }
+
+    private String normalizarFiltroEstado(String filtroEstado) {
+        if (filtroEstado == null) {
+            return "todos";
+        }
+
+        switch (filtroEstado.toLowerCase()) {
+            case "todos":
+            case "en_espera":
+            case "en_activo":
+            case "caducada":
+            case "finalizada":
+                return filtroEstado.toLowerCase();
+            default:
+                return "todos";
+        }
+    }
+
+    private StatusPaRequest estadoDesdeFiltro(String filtroEstado) {
+        if (filtroEstado == null) {
+            return null;
+        }
+
+        switch (filtroEstado.toLowerCase()) {
+            case "en_espera":
+                return StatusPaRequest.En_espera;
+            case "en_activo":
+                return StatusPaRequest.En_activo;
+            case "caducada":
+                return StatusPaRequest.Caducada;
+            case "finalizada":
+                return StatusPaRequest.Finalizada;
+            default:
+                return null;
+        }
+    }
+
+    private List<PaRequest> filtrarPorEstado(List<PaRequest> procesos,
+                                             String filtroEstado) {
+
+        StatusPaRequest estado = estadoDesdeFiltro(filtroEstado);
+
+        if (estado == null) {
+            return procesos;
+        }
+
+        return procesos.stream()
+                .filter(paRequest -> paRequest.getStatus() == estado)
+                .toList();
+    }
+
+    private void cargarPaginacionProcesos(Model model,
+                                          List<PaRequest> procesos,
+                                          int page) {
+
+        int pageSize = 10;
+
+        int total = procesos.size();
+        int totalPages = (int) Math.ceil((double) total / pageSize);
+
+        if (totalPages == 0) {
+            page = 0;
+        } else if (page < 0) {
+            page = 0;
+        } else if (page >= totalPages) {
+            page = totalPages - 1;
+        }
+
+        int from = page * pageSize;
+        int to = Math.min(from + pageSize, total);
+
+        List<PaRequest> pagina;
+
+        if (total == 0) {
+            pagina = List.of();
+        } else {
+            pagina = procesos.subList(from, to);
+        }
+
+        model.addAttribute("paRequests", pagina);
+        model.addAttribute("currentPage", page);
+        model.addAttribute("totalPages", totalPages);
+        model.addAttribute("totalProcesos", total);
     }
 }
